* Wrap variable assignments in return statements with parentheses to ensure Chrome 1 support. [jddalton]

* Ensure Fuse.Function, when used as a constructor, makes the default value of `this` equal to the document global and change the `thisArg` assigned by wrappers in Fuse.Fusebox and Fuse.Function. [jddalton]

* Optimize Fuse.String#camelize by using while-loops instead of String#replace. [jddalton, kangax]

* Optimize Element.hasAttribute() by forking if Element#hasAttribute exists. [jddalton, kangax]

* Memoize heavily used Fuse.String methods `capitalize` and `camelize`. [jddalton, kangax]

* Make the Fuse.Class wrapper used for this._super only perform __method.call(this) when no arguments are passed. [jddalton]

* Remove the dollar sign method from the global namespace. [jddalton]

* Ensure Event cache is cleared when there are no event handlers and fix a typo in _winLoadWrapper(). [jddalton]

* Make the dom-loaded solution rely on cross-browser rules[n].selectorText instead of rules[n].cssText. [jddalton]

* Avoid an edge-case massive delay in the dom-loaded solution by using global.frameElement instead of global.top. [jQuery Trac #4787] [jddalton, Rich Dougherty]

* Make Fuse.Number methods follow spec and work with a generic `this` as well as optimize the math methods. [jddalton]

* Rename Fuse.String#dasherize to `hyphenate`, variables used in String methods from `hash` to `object`, and Fuse.Class private `_emptyFunction` to `_subclass`. [jddalton, kangax, Valerio Proietti]
  Note: Backwards compatibility warning.

* Optimize Hash objects by adding a Fuse.Hash#_data property and correct the Fuse.Hash#_object property. [jddalton]

* Use 1 * foo to more quickly coerce data to numbers instead of +foo. [kangax]

* Change Array method internals from Fuse.Object -> Object usage and throw a TypeError if `this` is null/undefined. [jddalton]

* Ensure the `object` argument of Fuse.Object.hasKey() is coerced to an object in all forks of the method. [jddalton] 
